# saios

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
fixtures/: sample_post.md
fixtures/gmail/: thread_001.json  thread_002.json  thread_003.json
render/: .gitignore  Makefile  README.md
render/briefs/: content_multiplier_walkthrough.md  inbox_triage_walkthrough.md  lead_intercept_walkthrough.md
render/remotion/: .gitignore  package.json  tsconfig.json
render/remotion/src/: Reel.tsx  Root.tsx  Walkthrough.tsx
render/scripts/: render_brief.py
saios/agents/content_multiplier/: agent.py  evals.py  prompt.md
saios/agents/inbox_triage/: agent.py  evals.py  prompt.md
saios/agents/lead_intercept/: agent.py  evals.py  prompt.md
saios/harness/: __init__.py  agent.py  config.py  cost_guard.py  logging.py
saios/tools/: __init__.py  fs.py  gmail.py  notion.py
scripts/: run_content_multiplier.py  run_inbox_triage.py  run_lead_intercept.py
